--- a/src/components/graph/Graph.css
+++ b/src/components/graph/Graph.css
@@ -1,15 +1,42 @@
 .graph-container {
   display: grid;
-  grid-template-rows: 1fr 5px 1fr;
+  grid-template-rows: 1fr 5px 5fr;
   height: 100%;
 }
 
-textarea {
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  box-sizing: border-box;
+.grow-wrap {
+  /* easy way to plop the elements on top of each other and have them both sized based on the tallest one's height */
+  display: grid;
 }
+.grow-wrap::after {
+  /* Note the weird space! Needed to preventy jumpy behavior */
+  content: attr(data-replicated-value) " ";
+
+  /* This is how textarea text behaves */
+  white-space: pre-wrap;
+
+  /* Hidden from view, clicks, and screen readers */
+  visibility: hidden;
+}
+.grow-wrap > textarea {
+  /* You could leave this, but after a user resizes, then it ruins the auto sizing */
+  resize: none;
+
+  /* Firefox shows scrollbar on growth, you can hide like this. */
+  overflow: auto;
+}
+.grow-wrap > textarea,
+.grow-wrap::after {
+  /* Identical styling required!! */
+  border: 1px solid black;
+  padding: 0.5rem;
+  font: inherit;
+
+  /* Place on top of each other */
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+
 
 svg {
   width: 100%;
@@ -17,9 +44,8 @@ svg {
 }
 
 .toolbar {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
+  position: sticky;
+  bottom: 0;
 }
 
 .splitter {
