--- a/src/components/list/list.css
+++ b/src/components/list/list.css
@@ -1,3 +1,13 @@
+/* 
+Datum: 27.03.2025
+Projektname: MapIntelligence
+Namen: Kevin Leutwyler, Mojtaba Hasanzadeh, Narmatha Nanthakumar
+Für diesen Code zuständig: Narmatha
+Hauptquelle: YouTube-Tutorial von Lama Dev
+
+Beschreibung: Dieses File definiert die Darstellung der 'List'-Komponente.
+*/
+
 .list {
     width: 20vw; /* 30% der Bildschirmbreite */
     max-width: 0px; /* Mindestens 300px, falls Bildschirm klein ist */
